<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  	<RelativeLayout
		android:layout_width="fill_parent"
		android:drawingCacheQuality="high"
		android:layout_height="130dip">
    <TextView android:text="TextView"
    		  android:padding="5dip"
    		  android:textSize="18sp"
    		  android:id="@+id/tv_examname"
    		  android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"></TextView>
    <TextView android:text="@string/examtime"
    		  android:id="@+id/label_examtime"
    		  android:textSize="15sp"
    		  android:layout_width="wrap_content"
    		  android:padding="5dip"
    		  android:layout_below="@+id/tv_examname"
    		  android:layout_height="wrap_content"></TextView>
    <TextView android:text="TextView"
    		  android:id="@+id/tv_examtime"
    		  android:textSize="15sp"
    		  android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
    		  android:padding="5dip"
    		  android:layout_toRightOf="@+id/label_examtime"
    		  android:layout_alignTop="@+id/label_examtime"
    		  android:layout_alignBottom="@+id/label_examtime"></TextView>
    <TextView android:text="@string/location"
    		  android:id="@+id/label_examlocation"
    		  android:textSize="15sp"
    		  android:layout_width="wrap_content"
    		  android:padding="5dip"
    		  android:layout_height="wrap_content"
    		  android:layout_below="@+id/label_examtime"></TextView>
	<TextView android:text="TextView"
    		  android:id="@+id/tv_examlocation"
    		  android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
    		  android:textSize="15sp"
    		  android:padding="5dip"
    		  android:layout_toRightOf="@+id/label_examlocation"
    		  android:layout_alignTop="@+id/label_examlocation"
    		  android:layout_alignBottom="@+id/label_examlocation"></TextView>
	<TextView android:text="@string/teacher"
    		  android:id="@+id/label_examteacher"
    		  android:textSize="15sp"
    		  android:layout_width="wrap_content"
    		  android:padding="5dip"
    		  android:layout_height="wrap_content"
    		  android:layout_below="@+id/label_examlocation"></TextView>
	<TextView android:text="TextView"
    		  android:id="@+id/tv_examteacher"
    		  android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
    		  android:textSize="15sp"
    		  android:padding="5dip"
    		  android:layout_toRightOf="@+id/label_examteacher"
    		  android:layout_alignTop="@+id/label_examteacher"
    		  android:layout_alignBottom="@+id/label_examteacher"></TextView>
	</RelativeLayout>
</LinearLayout>
